<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_card" />

                <TextView
                    android:id="@+id/txtCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/credit_card_number"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edtCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/enter_your_credit_card_number"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/txtCard"
                    app:layout_constraintTop_toBottomOf="@+id/txtCard"
                    app:validateType='@{"creditCard"}' />

                <TextView
                    android:id="@+id/txtMonth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/expiry_month"
                    app:layout_constraintStart_toStartOf="@+id/edtCard"
                    app:layout_constraintTop_toBottomOf="@+id/edtCard" />

                <EditText
                    android:id="@+id/edtMonth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/month"
                    android:inputType="number"
                    android:maxLength="2"
                    app:layout_constraintEnd_toEndOf="@+id/txtMonth"
                    app:layout_constraintStart_toStartOf="@+id/txtMonth"
                    app:layout_constraintTop_toBottomOf="@+id/txtMonth"
                    app:validateDate='@{"MM"}'
                    app:validateDateAutoDismiss="@{true}" />

                <TextView
                    android:id="@+id/txtYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/expiry_year"
                    app:layout_constraintStart_toEndOf="@+id/txtMonth"
                    app:layout_constraintTop_toBottomOf="@+id/edtCard" />

                <EditText
                    android:id="@+id/edtYear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/year"
                    android:inputType="number"
                    android:maxLength="2"
                    app:layout_constraintEnd_toEndOf="@+id/txtYear"
                    app:layout_constraintStart_toStartOf="@+id/txtYear"
                    app:layout_constraintTop_toBottomOf="@+id/txtYear" />

                <TextView
                    android:id="@+id/txtCvv"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/cvv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtCard" />

                <EditText
                    android:id="@+id/edtCvv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/cvv"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="@+id/txtCvv"
                    app:layout_constraintStart_toStartOf="@+id/txtCvv"
                    app:layout_constraintTop_toBottomOf="@+id/txtCvv"
                    app:validateMaxLength="@{4}"
                    app:validateMinLength="@{3}" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtMonth"
                    app:srcCompat="@drawable/ic_account_circle" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/account_holder_name"
                    app:layout_constraintStart_toStartOf="@+id/edtMonth"
                    app:layout_constraintTop_toBottomOf="@+id/edtMonth" />

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/enter_your_name"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/txtName"
                    app:layout_constraintTop_toBottomOf="@+id/txtName"
                    app:validateEmpty="@{true}" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:text="Submit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtName" />

                <TextView
                    android:id="@+id/txtResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:visibility="gone"
                    android:text="Result"
                    android:textColor="@android:color/holo_green_dark"
                    android:textStyle="bold|italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />

            </android.support.constraint.ConstraintLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</layout>